2003-11-14  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* camfr_wrap.cpp: Wrap set_estimate for Slab.

2003-11-04  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* defs.cpp: Undo change in unstable_exp_threshold.

2003-11-03  Lieven Vanholme  <Lieven.Vanholme@ugent.be>

	* camfr_wrap.cpp: fix plane wave incident field.

2003-11-03  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* defs.cpp: Relax unstable_exp_threshold.

2003-08-04  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* geometry.py: Fix thinko in to_expression.

2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* scatterer.h: Improve all_layers_uniform.

2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* geometry.py: Improve to_expression.

2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* defs.h: Add field_calc_heuristic.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* S_scheme_fields.cpp: Better check for DiagScatterer.

2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* S_scheme.cpp: use unstable_exp_threshold.

2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>

	* cavity.cpp: Improve checking for gain_material (again).

2003-07-14 Peter Bienstman <Peter.Bienstman@ugent.be>

	* cavity.cpp: Improve checking for gain_material.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.h: Improve memory management.
	* stack.cpp: Ditto.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.cpp: Improve memory management.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add pick_sign_k.
	* defs.cpp: Ditto.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* scatterer.h: Add SquashedScatterer.
	* scatterer.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-07-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* S_scheme.cpp: Regularise in case of resonance.

2003-06-13  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add get_polarisation.
